Refactor cloudformation build, package, and deploy to support nested stack.

--- a/aws/cloudformation/lambda/layer/nodejs/package.json
+++ b/aws/cloudformation/lambda/layer/nodejs/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "test-layer",
+  "name": "layer-example",
   "version": "0.0.1",
   "description": "Layer package: test-layer",
   "private": true,
   "dependencies": {
-    "@test-layer/package1": "file:package1",
-    "@test-layer/package2": "file:package2",
-    "@test-layer/package3": "file:package3",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "@layer-example/package1": "file:package1",
+    "@layer-example/package2": "file:package2",
+    "@layer-example/package3": "file:package3"
   }
 }
